# FaceBoxes

./: .gitignore  meson.build
debian/: .gitignore  README.Debian  README.source  changelog  control  copyright  manpage.1.ex  manpage.sgml.ex  manpage.xml.ex  menu.ex  postinst.ex  postrm.ex  preinst.ex  prerm.ex  seetaface-detector.cron.d.ex  seetaface-detector.doc-base.EX  shlibs.local.ex  watch.ex
include/: CFaceDetector.h  CFaceInfo.h  FaceDetector.h  SeetaFaceDetectorConfig.h.in  meson.build  model_helper.h
include/Common/: CStruct.h  Struct.h  meson.build
src/: FaceDetector.cpp
